// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic Profile Manager Validate should be able to detect a type mismatch from the schema for booleans 1`] = `
"Errors located in profile \\"bad_apple\\" of type \\"apple\\":
rotten is not of a type(s) boolean
"
`;

exports[`Basic Profile Manager Validate should be able to detect a type mismatch from the schema for strings 1`] = `
"Errors located in profile \\"bad_apple\\" of type \\"apple\\":
description is not of a type(s) string
"
`;

exports[`Basic Profile Manager Validate should be able to detect all missing required fields on the schema 1`] = `
"Errors located in profile \\"bad_strawberry\\" of type \\"strawberry\\":
profile requires property \\"description\\"
profile requires property \\"amount\\"
"
`;

exports[`Basic Profile Manager Validate should be able to detect that a profile requires a dependency of a certain type 1`] = `"Profile type \\"strawberry\\" specifies a required dependency of type \\"apple\\" on the \\"strawberry\\" profile type configuration document. A dependency of type \\"apple\\" was NOT listed on the input profile."`;

exports[`Basic Profile Manager Validate should be able to detect that the dependencies are present, but type is missing 1`] = `"Expect Error: The profile passed (name \\"bad_apple\\" of type \\"apple\\") has dependencies as a property, but an entry does not contain \\"type\\"."`;

exports[`Basic Profile Manager Validate should detect a missing profile name 1`] = `"Expect Error: The profile passed does not contain a name (type: \\"apple\\") OR the name property specified is not of type \\"string\\"."`;

exports[`Basic Profile Manager Validate should detect a that we are attempting to use the meta name 1`] = `"Expect Error: You cannot specify \\"apple_meta\\" as a profile name. This profile name is reserved for internal Imperative usage."`;

exports[`Basic Profile Manager Validate should detect that the dependencies are not an array 1`] = `"Expect Error: The profile passed (name \\"bad_apple\\" of type \\"apple\\") has dependencies as a property, but it is NOT an array (ill-formed)"`;

exports[`Basic Profile Manager Validate should detect that the dependencies are present, but name is missing 1`] = `"Expect Error: The profile passed (name \\"bad_apple\\" of type \\"apple\\") has dependencies as a property, but an entry does not contain \\"name\\"."`;

exports[`Basic Profile Manager Validate should detect undefined parms 1`] = `"Expect Error: A request was made to validate a profile (of type \\"apple\\"), but no parameters were specified."`;

exports[`Basic Profile Manager Validate should fail a save request if a profile has more properties than defined on the schema 1`] = `
"Errors located in profile \\"good_apple\\" of type \\"apple\\":
profile is not allowed to have the additional property \\"seedless\\"
"
`;

exports[`Basic Profile Manager Validate should validate a well formed profile successfully 1`] = `"Profile \\"good_apple\\" of type \\"apple\\" is valid."`;
